# flags
AM_CPPFLAGS = -std=c++11 -Wall -O3 -ftemplate-depth=100 -g -I../include

# sources
bin_PROGRAMS = lglayout lglayout2D lglayout3D lglfileconvert lglrebuild lglbreakup
lglayout_SOURCES = lglayout.C calcFuncs.C
lglayout2D_SOURCES = lglayout.C calcFuncs.C
lglayout3D_SOURCES = lglayout.C calcFuncs.C
lglfileconvert_SOURCES = lglfileconvert.C 
lglrebuild_SOURCES = lglrebuild.C calcFuncs.C
lglbreakup_SOURCES = lglbreakup.C

